--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 spring.application.name=ecommerce
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/ecommerce_db
 spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=Jacfu676*
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
