Nueva estructura de la aplicación e-commerce

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=ecommerce
-spring.datasource.url=jdbc:postgresql://localhost:5433/ecommerce_db
-spring.datasource.username=postgres
-spring.datasource.password=Jacfu676*
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
