--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.application.name=ecommerce
 spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 api.security.secret=${JWT_SECRET:123456789}
 api.security.expiration=120
